# skeleton-quick-script

./: .gitignore  README.md  commands.py  pyproject.toml  {{name}}.code-workspace  {{name}}.py
application/: __init__.py
application/config/: base.py  logs.py  project.py
application/console/: __init__.py  getter.py
application/tests/: conftest.py  test_cli.py  test_systems.py
application/track/: timer.py
notebooks/: connections.ipynb
