[tool.poetry]
name = "{{name}}"
version = "0.1.0"
description = ""
authors = ["oryon-dominik <oryon@cyberise.de>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.22.0"
pydantic = "^1.9.0"
typer = "^0.4.0"
toml = "^0.10.2"
rich = "^11.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
jupyter = "^1.0.0"
black = "^22.1.0"

[tool.black]
line-length = 119
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs          # exclude a few common directories in the
    | \.git           # root of the project
    | notebooks
  )/
)
'''

[tool.flake8]
statistics = "True"
ignore = ["D203" , "W503"]
exclude = '''
    .git,
    '''
max-line-length = 119

[tool.pytest.ini_options]
minversion = "7.0.0"
addopts = "-p no:warnings"
python_files = "tests.py test_*.py *_tests.py"
norecursedirs = ".git notebooks"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
